# graphify_temporal

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
docs/: cli-reference.md  index.html  spec.md  team-setup.md  timestamps.md
graphify_temporal/: __init__.py  __main__.py  enricher.py  fs.py  git_source.py  install.py  query.py
tests/: __init__.py  test_enricher.py  test_install.py  test_query.py
