[project]
name = "graphify-temporal"
version = "1.0.0"
description = "Temporal enrichment for graphify knowledge graphs — adds file_mtime to nodes and preceded_by edges from filesystem timestamps"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
graphify-temporal = "graphify_temporal.__main__:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
